@@ -3,6 +3,11 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - additional error checking and tests
           - also support objects with &{} overloading, in place of subrefs
+          - now doing the same end-of-response cleanup handling that the real LWPUA does:
+            - saving the request on the response
+            - adding Client-Date header
+            - respect show_progress settings
+            - runs handlers
 
 0.004     2012-06-27 15:41:02 PDT-0700 (Karen Etheridge)
           - map_response now accepts a coderef in place of the HTTP::Response
